--- a/sass/themes/mobile/lib/module/_list.scss
+++ b/sass/themes/mobile/lib/module/_list.scss
@@ -37,3 +37,16 @@
         }
     }
 }
+
+
+
+.rsimg {
+    position: relative;
+    overflow: hidden;
+
+    img {
+        max-width: none;
+        max-height: none;
+        @include position-center;
+    }
+}
