--- a/sass/themes/mobile/page/_photos.scss
+++ b/sass/themes/mobile/page/_photos.scss
@@ -72,6 +72,11 @@
                     &:nth-child(3n) {
                         margin-right: 0;
                     }
+
+                    > .img {
+                        height: 0;
+                        padding-bottom: 100%;
+                    }
                 }
             }
             // list end
