--- a/sass/themes/pc/lib/module/list/shop/_img.scss
+++ b/sass/themes/pc/lib/module/list/shop/_img.scss
@@ -28,9 +28,9 @@
 
                 > img {
 
-                    &.lazyload {}
+                    // &.lazyload {}
 
-                    &.lazyloaded {}
+                    // &.lazyloaded {}
 
                     // &:hover {
                     //     transition: all .7s;
