--- a/sass/themes/mobile/lib/module/_list.scss
+++ b/sass/themes/mobile/lib/module/_list.scss
@@ -29,8 +29,8 @@
                 overflow: hidden;
 
                 img {
-                    max-width: none;
-                    max-height: none;
+                    max-width: none !important;
+                    max-height: none !important;
                     @include position-center;
                 }
             }
@@ -45,8 +45,8 @@
     overflow: hidden;
 
     img {
-        max-width: none;
-        max-height: none;
+        max-width: none !important;
+        max-height: none !important;
         @include position-center;
     }
 }
