--- a/sass/themes/mobile/page/voucher/detail/header/_content.scss
+++ b/sass/themes/mobile/page/voucher/detail/header/_content.scss
@@ -13,7 +13,7 @@
     @include remCalc("margin-top", 10);
     display: flex;
     align-items: center;
-    background-image: url($bast-images-path + '/bg_ticket.png');
+    background-image: url($bast-images-path + '/mobile/bg_ticket.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
