--- a/sass/themes/pc/page/restaurant/detail/_baseinfo.scss
+++ b/sass/themes/pc/page/restaurant/detail/_baseinfo.scss
@@ -32,6 +32,11 @@
                         flex: 2;
                         // @include remCalc("width", 464);
                         margin-left: 0;
+
+                        // img
+                        > .img {
+                            padding-bottom: 100%;
+                        }
                     }
 
                     &:nth-child(2) {
@@ -50,11 +55,11 @@
                                 margin-bottom: 0;
                             }
 
-                            > img {
-                                width: 100%;
-                                max-width: none;
-                                max-height: none;
-                            }
+                            // > img {
+                            //     width: 100%;
+                            //     max-width: none;
+                            //     max-height: none;
+                            // }
 
                             > .more {
                                 position: absolute;
